# midi-master-2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  main.cpp
lib/midiEngine/: MidiEngine.cpp  MidiEngine.h  README.md  SyncController.cpp  SyncController.h  SyncControllerTest.cpp  SyncControllerTest.h
lib/ui/: MidiMasterWindow.cpp  MidiMasterWindow.h
